tests/macros/plugin/extension.stderr
error: option `extension` does not exist for kind `plugin`
 --> $DIR/extension.rs:2:46
  |
2 |     let q = inquisition::questions![Plugin { extension: todo!() }];
  |                                              ^^^^^^^^^
