tests/macros/plugin/extension.rs
fn main() {
    let q = inquisition::questions![Plugin { extension: todo!() }];
}
